switched build config to esp32

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-; default_envs = nodemcu_esp32s
-default_envs = nodemcu_esp8266
+default_envs = nodemcu_esp32s
+; default_envs = nodemcu_esp8266
 
 [env:nodemcu_esp32s]
 ; http://docs.platformio.org/en/latest/boards/espressif32/nodemcu-32s.html
